--- a/static/css/header.css
+++ b/static/css/header.css
@@ -35,7 +35,8 @@ header {
     padding: 20px 10px;
 }
 
-.login-btn {
+.login-btn,
+.profile-btn {
     font-size: 25px;
     font-weight: 500;
     color: white;
