--- a/static/css/Login/login.css
+++ b/static/css/Login/login.css
@@ -1,5 +1,5 @@
 .login-modal {
-    display: none;
+    /* ## 로그인 모달로 안 열고 그냥 페이지로 열어야 하는 경우가 있어서, dispaly:none;은 base.html로 옮겨서 그냥 style로 정의해둠 */
     position: fixed;
     top: 0;
     left: 0;
