--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -37,13 +37,7 @@
         </nav>
         <!-- 로그인 버튼 / 로그아웃 버튼 -->
         {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'common:logout' %}">
-                {{ user.username }}
-                {% if user.is_superuser %}
-                <span style="color: gold;">(관리자)</span>
-                {% endif %}
-                (로그아웃)
-            </a>
+            <a class="profile-btn" href="{% url 'common:logout' %}">프로필</a>
         {% else %}
             <a class="login-btn">로그인</a>
         {% endif %}
